<resources>
    <string name="app_name">ST Portal</string>
    <string name="scan">Scan</string>
    <string name="scan_activity">Scan Activity</string>
    <string name="title_activity_student_reg">studentRegActivity</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="verify">Verify</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="upload_id_card_file">Upload ID card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rto_application">RTO_applicationActivity</string>

    <string name="success">Success!</string>
    <string name="hint_status">Status</string>
    <string name="hint_success_failure">Success/Failure</string>
    <string name="failure">Oops! You have not registered for an ST card</string>
    <string name="download">Download</string>

    <string name="hint_name">Name</string>
    <string name="admno">Admission No.</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="institution_name">Institution name</string>
    <string name="institution_location">Location of institution</string>
    <string name="course">Course</string>
    <string name="current_address">Current Address</string>
    <string name="year_of_grad">Year of Graduation</string>
    <string name="tv_hint_name">Name of Student</string>
    <string name="routes">Routes</string>

    <string name="submit">Submit</string>
    <string name="forms">FORMS</string>
    <string name="hint_enter_complaint_message">Enter Complaint Message</string>

    <string name="hint_bus_num">Bus number</string>
    <string name="hint_bus_complaint_date">Complaint Date</string>
    <string name="hint_complaint_msg">Complaint Message</string>
    <string name="complaints">Complaints</string>
<!--        <string name="base_api_url">https://jsonplaceholder.typicode.com/todos</string>-->
    <string name="base_api_url">http://priyanga-hs3kCo.localhost.run</string>
    <string name="hint_id">ID of student</string>
</resources>
