<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewApplicationStatusActivity">

    <View
        android:id="@+id/view_app_status"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:background="@color/dark_purple" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_purple">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_dp_background"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_app_status"
        android:layout_marginTop="-50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvStatusName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_hint_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/email" />
                <TextView
                    android:id="@+id/tvStatusEmail"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/admno" />
                <TextView
                    android:id="@+id/tvStatusAdmno"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/dob" />
                <TextView
                    android:id="@+id/tvStatusDOB"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/institution_name" />
                <TextView
                    android:id="@+id/tvStatusInstitution"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/institution_location" />
                <TextView
                    android:id="@+id/tvStatustInstLoc"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/course" />
                <TextView
                    android:id="@+id/tvStatusCourse"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/year_of_grad" />
                <TextView
                    android:id="@+id/tvStatusYearOfGrad"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/current_address" />
                <TextView
                    android:id="@+id/tvStatusAddress"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/routes" />
                <TextView
                    android:id="@+id/tvStatusRoutes"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/download"
                android:background="@color/dark_purple"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textColor="@color/login_form_details_medium"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>