<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualApplicationActivity">

    <View
        android:id="@+id/ind_app_view"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:background="@color/dark_purple" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_purple">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ind_app_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_dp_background"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ind_app_view"
        android:layout_marginTop="-50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvApplicantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Srividya Krishnakumar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/email" />
                <TextView
                    android:id="@+id/tvApplicantEmail"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/dob" />
                <TextView
                    android:id="@+id/tvApplicantDOB"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/institution_name" />
                <TextView
                    android:id="@+id/tvApplicantInstitution"
                    android:layout_width="wrap_content"
                    android:width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>